New views added
